# 2D-Game-engine-CPP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/: FUNDING.yml
.github/workflows/: build.yml
include/: Application.h  Buffer.h  Components.h  ImGuiLayer.h  Input.h  OrthographicCamera.h  Renderer2D.h  Scene.h  SceneSerializer.h  Shader.h  Texture2D.h  VertexArray.h
plugins/: CMakeLists.txt
plugins/Forge2D_Lighting/: CMakeLists.txt
plugins/Forge2D_Lighting/include/: LightingExtension.h
plugins/Forge2D_Lighting/src/: LightingExtension.cpp
src/: Application.cpp  Buffer.cpp  ImGuiLayer.cpp  Input.cpp  OrthographicCamera.cpp  Renderer2D.cpp  Scene.cpp  SceneSerializer.cpp  Shader.cpp  Texture2d.cpp  VertexArray.cpp  main.cpp
tests/: CMakeLists.txt  MathTests.cpp
